--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -41,6 +41,60 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "pMh4Ko7ycToT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# leer desde web\n",
+        "url=\"https://raw.githubusercontent.com/adrianquiroga/diabetes/master/diabetes.csv\"\n",
+        "data = pd.read_csv(url)\n",
+        "data.head()\n",
+        "#os.chdir(\"unidad/Colab Notebooks\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GPUMjupfbmum",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# leer de forma local\n",
+        "\"\"\"\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "data = pd.read_csv(\"diabetes.csv\")\n",
+        "data.head()\n",
+        "ls -l\n",
+        "\"\"\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RUPQwtsWA0Dk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# leer desde google drive\n",
+        "\"\"\"\"\n",
+        "#os.chdir(\"unidad/Colab Notebooks\")\n",
+        "os.chdir(\"unidad\")\n",
+        "\"\"\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "jQr5l-PG10OV",
         "colab_type": "code",
         "colab": {}
@@ -84,86 +138,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pMh4Ko7ycToT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "url=\"https://raw.githubusercontent.com/adrianquiroga/diabetes/master/diabetes.csv\"\n",
-        "data = pd.read_csv(url)\n",
-        "data.head()\n",
-        "#os.chdir(\"unidad/Colab Notebooks\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RwtytnK97Oxb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-_ZhETm5feIn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from google.colab import files\n",
-        "uploaded = files.upload()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GPUMjupfbmum",
-        "colab_type": "code",
-        "outputId": "217d7f39-510b-4b29-a667-541e87e10a9f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
-        }
-      },
-      "source": [
-        "# leer de forma local\n",
-        "\"\"\"\n",
-        "data2 = pd.read_csv(\"diabetes.csv\")\n",
-        "data2.head()\n",
-        "\"\"\"\n",
-        "# leer desde google drive4\n",
-        "#os.chdir(\"unidad/Colab Notebooks\")\n",
-        "os.chdir(\"unidad\")"
-      ],
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-bd48e5fee084>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# leer desde google drive4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#os.chdir(\"unidad/Colab Notebooks\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"unidad\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'unidad'"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
