Creado mediante Colaboratory

--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -39,6 +39,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9HtNEmMKHX7f",
+        "colab_type": "text"
+      },
+      "source": [
+        "Leer desde web"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pMh4Ko7ycToT",
@@ -46,7 +56,6 @@
         "colab": {}
       },
       "source": [
-        "# leer desde web\n",
         "url=\"https://raw.githubusercontent.com/adrianquiroga/diabetes/master/diabetes.csv\"\n",
         "data = pd.read_csv(url)\n",
         "data.head()\n",
@@ -56,6 +65,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vLUzuaMnHev3",
+        "colab_type": "text"
+      },
+      "source": [
+        "Suber archivo local"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GPUMjupfbmum",
@@ -63,34 +82,54 @@
         "colab": {}
       },
       "source": [
-        "# leer de forma local\n",
         "\"\"\"\n",
         "from google.colab import files\n",
         "uploaded = files.upload()\n",
         "data = pd.read_csv(\"diabetes.csv\")\n",
         "data.head()\n",
         "ls -l\n",
+        "# files.download(\"sample_data/README.md\")\n",
         "\"\"\""
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YL0vfNSUHmI5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Clonar github"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "RUPQwtsWA0Dk",
+        "id": "UNhR2h1ME6cm",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# leer desde google drive\n",
-        "\"\"\"\"\n",
-        "#os.chdir(\"unidad/Colab Notebooks\")\n",
-        "os.chdir(\"unidad\")\n",
-        "\"\"\""
+        "\"\"\"\n",
+        "% cd sample_data\n",
+        "! git clone https://github.com/adrianquiroga/diabetes.git\n",
+        "! ls -l\n",
+        "\"\"\"\""
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UczvnUA7HubX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Leer desde drive google"
+      ]
     },
     {
       "cell_type": "code",
@@ -102,6 +141,7 @@
       "source": [
         "# Import PyDrive and associated libraries.\n",
         "# This only needs to be done once per notebook.\n",
+        "\"\"\"\n",
         "from pydrive.auth import GoogleAuth\n",
         "from pydrive.drive import GoogleDrive\n",
         "from google.colab import auth\n",
@@ -119,25 +159,212 @@
         "# A file ID looks like: laggVyWshwcyP6kEI-y_W3P8D26sz\n",
         "file_id = 'REPLACE_WITH_YOUR_FILE_ID'\n",
         "downloaded = drive.CreateFile({'id': file_id})\n",
-        "print('Downloaded content \"{}\"'.format(downloaded.GetContentString()))"
+        "print('Downloaded content \"{}\"'.format(downloaded.GetContentString()))\n",
+        "\n",
+        "# iniciar sesión para evitar el error discovery_cache\n",
+        "import logging\n",
+        "logging.getLogger('googleapiclient.discovery_cache').setLevel(logging.ERROR)\n",
+        "\"\"\""
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "7r_4XaZp2E9D",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yp5sA39YTl5f",
+        "colab_type": "text"
       },
       "source": [
-        "# iniciar sesión para evitar el error discovery_cache\n",
-        "import logging\n",
-        "logging.getLogger('googleapiclient.discovery_cache').setLevel(logging.ERROR)"
+        "Subir archivo desde google drive metodo 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dg2sHkCzLCHj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "97a7af54-8506-47d8-cf01-1a29eca592b5"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/drive\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fKhRuvg-OdQv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "494139f1-834c-4a99-94c8-aee65a37d946"
+      },
+      "source": [
+        "! pwd\n",
+        "% cd /content/drive/My Drive/Colab Notebooks/diabetes\n",
+        "! ls -l\n",
+        "data5 = pd.read_csv(\"diabetes.csv\")\n",
+        "data5.head()"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Colab Notebooks/diabetes\n",
+            "/content/drive/My Drive/Colab Notebooks/diabetes\n",
+            "total 68\n",
+            "-rw------- 1 root root 23873 Sep 29 00:29 diabetes.csv\n",
+            "-rw------- 1 root root 44700 Sep 29 04:35 Diabetes.ipynb\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Pregnancies</th>\n",
+              "      <th>Glucose</th>\n",
+              "      <th>BloodPressure</th>\n",
+              "      <th>SkinThickness</th>\n",
+              "      <th>Insulin</th>\n",
+              "      <th>BMI</th>\n",
+              "      <th>DiabetesPedigreeFunction</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Outcome</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>6</td>\n",
+              "      <td>148</td>\n",
+              "      <td>72</td>\n",
+              "      <td>35</td>\n",
+              "      <td>0</td>\n",
+              "      <td>33.6</td>\n",
+              "      <td>0.627</td>\n",
+              "      <td>50</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>85</td>\n",
+              "      <td>66</td>\n",
+              "      <td>29</td>\n",
+              "      <td>0</td>\n",
+              "      <td>26.6</td>\n",
+              "      <td>0.351</td>\n",
+              "      <td>31</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>8</td>\n",
+              "      <td>183</td>\n",
+              "      <td>64</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>23.3</td>\n",
+              "      <td>0.672</td>\n",
+              "      <td>32</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>89</td>\n",
+              "      <td>66</td>\n",
+              "      <td>23</td>\n",
+              "      <td>94</td>\n",
+              "      <td>28.1</td>\n",
+              "      <td>0.167</td>\n",
+              "      <td>21</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>137</td>\n",
+              "      <td>40</td>\n",
+              "      <td>35</td>\n",
+              "      <td>168</td>\n",
+              "      <td>43.1</td>\n",
+              "      <td>2.288</td>\n",
+              "      <td>33</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Pregnancies  Glucose  BloodPressure  ...  DiabetesPedigreeFunction  Age  Outcome\n",
+              "0            6      148             72  ...                     0.627   50        1\n",
+              "1            1       85             66  ...                     0.351   31        0\n",
+              "2            8      183             64  ...                     0.672   32        1\n",
+              "3            1       89             66  ...                     0.167   21        0\n",
+              "4            0      137             40  ...                     2.288   33        1\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GRNvL2vzH2oG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Dimensionar"
+      ]
     },
     {
       "cell_type": "code",
@@ -167,6 +394,16 @@
           },
           "execution_count": 24
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QB8w9gDUH6Vf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Tipos de datos"
       ]
     },
     {
@@ -409,6 +646,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LpMaQlgnIAkC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Correlación"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yX_XvNzQvTci",
@@ -443,6 +690,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sJvDJVLSIE5G",
+        "colab_type": "text"
+      },
+      "source": [
+        "Histogramas"
       ]
     },
     {
