Creado mediante Colaboratory

--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -56,10 +56,12 @@
         "colab": {}
       },
       "source": [
+        "\"\"\"\n",
         "url=\"https://raw.githubusercontent.com/adrianquiroga/diabetes/master/diabetes.csv\"\n",
         "data = pd.read_csv(url)\n",
         "data.head()\n",
-        "#os.chdir(\"unidad/Colab Notebooks\")"
+        "#os.chdir(\"unidad/Colab Notebooks\")\n",
+        "\"\"\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -184,17 +186,20 @@
       "metadata": {
         "id": "dg2sHkCzLCHj",
         "colab_type": "code",
+        "outputId": "97a7af54-8506-47d8-cf01-1a29eca592b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "97a7af54-8506-47d8-cf01-1a29eca592b5"
+        }
       },
       "source": [
+        "\"\"\"\n",
+        "# solo una vez para usar la siguiente fila\n",
         "from google.colab import drive\n",
-        "drive.mount(\"/content/drive\")"
+        "drive.mount(\"/content/drive\")\n",
+        "\"\"\""
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,29 +219,29 @@
       "metadata": {
         "id": "fKhRuvg-OdQv",
         "colab_type": "code",
+        "outputId": "8df2d524-4b45-46bc-ea4b-9c8847882a2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "494139f1-834c-4a99-94c8-aee65a37d946"
+        }
       },
       "source": [
         "! pwd\n",
         "% cd /content/drive/My Drive/Colab Notebooks/diabetes\n",
         "! ls -l\n",
-        "data5 = pd.read_csv(\"diabetes.csv\")\n",
-        "data5.head()"
+        "data = pd.read_csv(\"diabetes.csv\")\n",
+        "data.head()"
       ],
-      "execution_count": 77,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content/drive/My Drive/Colab Notebooks/diabetes\n",
             "/content/drive/My Drive/Colab Notebooks/diabetes\n",
-            "total 68\n",
+            "total 70\n",
             "-rw------- 1 root root 23873 Sep 29 00:29 diabetes.csv\n",
-            "-rw------- 1 root root 44700 Sep 29 04:35 Diabetes.ipynb\n"
+            "-rw------- 1 root root 47559 Sep 29 04:37 Diabetes.ipynb\n"
           ],
           "name": "stdout"
         },
@@ -352,7 +357,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 79
         }
       ]
     },
@@ -371,16 +376,16 @@
       "metadata": {
         "id": "WDdpDKyouORI",
         "colab_type": "code",
+        "outputId": "07da7c85-5cd9-4209-bcb3-cf567b7f5e76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a393d3bd-18ec-48b3-d2a0-6e20feae4543"
+        }
       },
       "source": [
         "data.shape"
       ],
-      "execution_count": 24,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +397,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 80
         }
       ]
     },
@@ -411,16 +416,16 @@
       "metadata": {
         "id": "lahtk7tUueJe",
         "colab_type": "code",
+        "outputId": "8b969565-5efc-4ef3-8c59-8ceae14c46d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "be35b5cc-eee9-435c-f22b-f6819c8fe8db"
+        }
       },
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 25,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +446,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 81
         }
       ]
     },
@@ -450,16 +455,16 @@
       "metadata": {
         "id": "KpNsqTeouieS",
         "colab_type": "code",
+        "outputId": "1a03f466-2edb-4509-e76d-b2c734907063",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        },
-        "outputId": "00a915eb-26b3-4bd6-f23e-56cc6e273a02"
+        }
       },
       "source": [
         "data.describe()"
       ],
-      "execution_count": 26,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -612,7 +617,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 82
         }
       ]
     },
@@ -621,17 +626,17 @@
       "metadata": {
         "id": "e4wveSaGuqOK",
         "colab_type": "code",
+        "outputId": "db8804d1-d35b-472c-8f11-5a0f05068c2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "8751a4be-1f04-4bc5-c161-c817918850fe"
+        }
       },
       "source": [
         "conteo_data = data.groupby(\"Outcome\").size()\n",
         "print(conteo_data)"
       ],
-      "execution_count": 36,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,17 +665,17 @@
       "metadata": {
         "id": "yX_XvNzQvTci",
         "colab_type": "code",
+        "outputId": "93a9057c-8971-478e-9de6-977d5568a311",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "17f12325-e813-4429-b073-97ccd8795b96"
+        }
       },
       "source": [
         "correlacion = data.corr(method=\"pearson\")\n",
         "print(correlacion)"
       ],
-      "execution_count": 40,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,17 +712,17 @@
       "metadata": {
         "id": "Tky3OuBQ0YiP",
         "colab_type": "code",
+        "outputId": "b78d42f6-d9d0-44ee-8b72-19863c156072",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
-        },
-        "outputId": "2d984687-602a-4041-9820-8c86d012d792"
+        }
       },
       "source": [
         "data.hist(figsize =(8,8))\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "display_data",
