Creado mediante Colaboratory

--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -187,20 +187,18 @@
       "metadata": {
         "id": "dg2sHkCzLCHj",
         "colab_type": "code",
-        "outputId": "97a7af54-8506-47d8-cf01-1a29eca592b5",
+        "outputId": "80096576-7dbc-4372-fbb9-f58d92458771",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
         }
       },
       "source": [
-        "\"\"\"\n",
-        "# solo una vez para usar la siguiente fila\n",
+        "# Cada vez que se reinicie la pce\n",
         "from google.colab import drive\n",
-        "drive.mount(\"/content/drive\")\n",
-        "\"\"\""
+        "drive.mount(\"/content/drive\")"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +218,7 @@
       "metadata": {
         "id": "fKhRuvg-OdQv",
         "colab_type": "code",
-        "outputId": "8df2d524-4b45-46bc-ea4b-9c8847882a2e",
+        "outputId": "d5a09ca9-025c-406e-abaf-c9eb06fc94fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
@@ -233,16 +231,16 @@
         "data = pd.read_csv(\"diabetes.csv\")\n",
         "data.head()"
       ],
-      "execution_count": 79,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "/content\n",
             "/content/drive/My Drive/Colab Notebooks/diabetes\n",
-            "/content/drive/My Drive/Colab Notebooks/diabetes\n",
-            "total 70\n",
+            "total 101\n",
             "-rw------- 1 root root 23873 Sep 29 00:29 diabetes.csv\n",
-            "-rw------- 1 root root 47559 Sep 29 04:37 Diabetes.ipynb\n"
+            "-rw------- 1 root root 78745 Sep 29 16:08 Diabetes.ipynb\n"
           ],
           "name": "stdout"
         },
@@ -358,7 +356,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 3
         }
       ]
     },
@@ -377,7 +375,7 @@
       "metadata": {
         "id": "WDdpDKyouORI",
         "colab_type": "code",
-        "outputId": "07da7c85-5cd9-4209-bcb3-cf567b7f5e76",
+        "outputId": "2c4cf729-1d79-4e2a-dcb0-ca341ca41716",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -386,7 +384,7 @@
       "source": [
         "data.shape"
       ],
-      "execution_count": 80,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +396,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 4
         }
       ]
     },
@@ -417,7 +415,7 @@
       "metadata": {
         "id": "lahtk7tUueJe",
         "colab_type": "code",
-        "outputId": "8b969565-5efc-4ef3-8c59-8ceae14c46d4",
+        "outputId": "58aa1db7-e40b-4d10-ed21-456b1050bdce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -426,7 +424,7 @@
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 81,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +445,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 5
         }
       ]
     },
@@ -456,7 +454,7 @@
       "metadata": {
         "id": "KpNsqTeouieS",
         "colab_type": "code",
-        "outputId": "1a03f466-2edb-4509-e76d-b2c734907063",
+        "outputId": "81cdb64c-66a7-46f1-d483-1a6091f8d8a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
@@ -465,7 +463,7 @@
       "source": [
         "data.describe()"
       ],
-      "execution_count": 82,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +616,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 6
         }
       ]
     },
@@ -627,7 +625,7 @@
       "metadata": {
         "id": "e4wveSaGuqOK",
         "colab_type": "code",
-        "outputId": "db8804d1-d35b-472c-8f11-5a0f05068c2c",
+        "outputId": "d060f1f1-8064-4816-dc67-0d790b9563cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -637,7 +635,7 @@
         "conteo_data = data.groupby(\"Outcome\").size()\n",
         "print(conteo_data)"
       ],
-      "execution_count": 83,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,7 +664,7 @@
       "metadata": {
         "id": "yX_XvNzQvTci",
         "colab_type": "code",
-        "outputId": "93a9057c-8971-478e-9de6-977d5568a311",
+        "outputId": "0dcc67bf-3d4f-4b46-ee1c-29a73afb34cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
@@ -676,7 +674,7 @@
         "correlacion = data.corr(method=\"pearson\")\n",
         "print(correlacion)"
       ],
-      "execution_count": 84,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,7 +711,7 @@
       "metadata": {
         "id": "Tky3OuBQ0YiP",
         "colab_type": "code",
-        "outputId": "b78d42f6-d9d0-44ee-8b72-19863c156072",
+        "outputId": "fc5efeea-69bc-4e6f-a58f-229fc8156aeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
@@ -723,7 +721,7 @@
         "data.hist(figsize =(8,8))\n",
         "plt.show()"
       ],
-      "execution_count": 85,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -744,16 +742,16 @@
       "metadata": {
         "id": "y4FzXfeMY2yW",
         "colab_type": "code",
+        "outputId": "c972c8fa-ead8-4aac-bb20-637827be6e50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 656
-        },
-        "outputId": "da6688f8-269a-4dd8-e1ab-62f8cfe4ecd9"
+        }
       },
       "source": [
         "data.plot(kind=\"box\",subplots = True, layout=(3,3), sharey = False, figsize=(8,8))"
       ],
-      "execution_count": 92,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -774,7 +772,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -789,6 +787,82 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JMdh8nwzxH8p",
+        "colab_type": "text"
+      },
+      "source": [
+        "Gráficar con varias variables"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iQIY4jNFxFTo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 292
+        },
+        "outputId": "476f64d1-9582-46a8-ff36-8cb6f9321633"
+      },
+      "source": [
+        "plt.matshow(data.corr())\n",
+        "plt.show"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function matplotlib.pyplot.show>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAECCAYAAADesWqHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAADpJJREFUeJzt3V2MXOV9x/Hv3+Nd+QVjxxgcB1sx\nqIBkIfEi1+IlogkOFBpEbnoBEpGCSkmrNgXSKkraC5QL7hBNLypaaqBEAaPEAalCDS9STFFSCrGN\nAWPjihcDNhDbEOIXMLbX/17M2Flcp3uGnme8u8/3I408u3v2/39G49+cM2fPPE9kJpLqMuV4D0DS\n4Bl8qUIGX6qQwZcqZPClChl8qULHNfgRcUVEbI6IVyLiO4V63BMR2yNiQ6H6iyJidURsjIiXIuKm\nAj2mRcSzEfF8r8f32u7R69OJiOci4pES9Xs9tkTEixGxPiLWFKg/JyJWRcTLEbEpIi5suf5ZvbEf\nvu2KiJvb7NHrc0vvud4QESsjYlqrDTLzuNyADvAqcDowDDwPLCnQ5xLgfGBDocexADi/d38W8N9t\nPw4ggBN694eAZ4ALCjyWbwEPAI8UfN63APMK1r8PuKF3fxiYU7BXB3gX+HzLdU8FXgem977+EfD1\nNnsczz3+MuCVzHwtM/cDDwJfbbtJZj4FvN923VH138nMdb37u4FNdJ+4NntkZu7pfTnUu7V65VVE\nLAS+Aqxos+4gRcRsui/0dwNk5v7M/KBgy+XAq5n5RoHaU4HpETEVmAG83Wbx4xn8U4G3Rn29lZYD\nM2gRsRg4j+4eue3anYhYD2wHnsjMtnt8H/g2cKjlukdL4PGIWBsRN7Zc+zRgB3Bv7y3LioiY2XKP\n0a4BVrZdNDO3AbcDbwLvAL/JzMfb7OHJvZZExAnAT4CbM3NX2/UzcyQzzwUWAssi4uy2akfEVcD2\nzFzbVs3/wxcy83zgSuAvIuKSFmtPpfu27s7MPA/YC5Q6dzQMXA38uEDtz9A9+j0N+BwwMyKua7PH\n8Qz+NmDRqK8X9r434UTEEN3Q35+ZD5Xs1Tt0XQ1c0WLZi4GrI2IL3bdcl0bED1usf0Rvb0Zmbgce\npvuWry1bga2jjoZW0X0hKOFKYF1m/qpA7S8Dr2fmjsw8ADwEXNRmg+MZ/F8CZ0TEab1Xz2uAfzuO\n4/lUIiLovqfclJl3FOpxckTM6d2fDlwGvNxW/cz8bmYuzMzFdJ+Hn2Vmq3sYgIiYGRGzDt8HLgda\n+2tLZr4LvBURZ/W+tRzY2Fb9o1xLgcP8njeBCyJiRu//13K6545aM7XNYv3IzIMR8ZfAY3TPjt6T\nmS+13SciVgJfBOZFxFbg1sy8u8UWFwNfA17svQcH+NvM/PcWeywA7ouIDt0X6x9lZrE/uRU0H3i4\n+3+ZqcADmfloyz2+Cdzf25m8Blzfcv3DL1qXAd9ouzZAZj4TEauAdcBB4DngrjZ7RO/PBZIq4sk9\nqUIGX6qQwZcqZPClChl8qULjIvgFLt2clD0mw2Owx/ioPy6CDxR/kiZJj8nwGOwxDuqPl+BLGqAi\nF/DMm9vJxYuGGm+/470RTj6p01ePzVvm9bX9gf17GRru84Na0d/mn6bHlN37Gm+7P/cx3PJ8DK30\nGG7+XAPsH/mQ4c6M/nqMjPTX49BHDE+Z3tfv7FvY3+MY2b2Xzqz+nu+pu5rvaw/u28vUaf3V/3jP\n+xzct3fM/7lFLtldvGiIZx9bNPaG/w9fuv6GovUBstNn8j+F6U+2fpXy/9bp70W1X7Hws0XrA8QH\nu4v32HzbguI9Tnqs7Av3xkf+vtF2HupLFTL4UoUMvlQhgy9VyOBLFTL4UoUMvlShRsEfxIo3kgZn\nzOD35nn7R7qzii4Bro2IJaUHJqmcJnv8gax4I2lwmgR/0q14I9WutZN7EXFjRKyJiDU73uvvAxWS\nBqtJ8ButeJOZd2Xm0sxc2u8n7SQNVpPgT4oVbyT91pgfyx3UijeSBqfR5/F7y0G1uSSUpOPIK/ek\nChl8qUIGX6qQwZcqZPClChl8qUJFptfevGVe8emvV9+7omh9gD/4RvnFWHLJ6cV7bF1+YtH6M99u\nf22Go03fOad4j9lPFYnDJ+xYdqho/YOrm23nHl+qkMGXKmTwpQoZfKlCBl+qkMGXKmTwpQoZfKlC\nTabXvicitkfEhkEMSFJ5Tfb4/wpcUXgckgZozOBn5lPA+wMYi6QB8T2+VKEi8+of2L+3rbKSCmgt\n+KPn1R8antlWWUkFeKgvVajJn/NWAk8DZ0XE1oj4k/LDklRSkwU1rh3EQCQNjof6UoUMvlQhgy9V\nyOBLFTL4UoUMvlQhgy9VqMwKAgHZiSKlDxvEYhf/8c93Fe9x4d/8WfEeC37xYdH6O8+ZUbQ+wNwX\n9hTvsXdB+UU7zvhB2efi/feaLdjhHl+qkMGXKmTwpQoZfKlCBl+qkMGXKmTwpQoZfKlCTWbgWRQR\nqyNiY0S8FBE3DWJgksppcuXeQeCvM3NdRMwC1kbEE5m5sfDYJBXSZEGNdzJzXe/+bmATcGrpgUkq\np6/3+BGxGDgPeKbEYCQNRuPgR8QJwE+AmzNz1zF+7oIa0gTRKPgRMUQ39Pdn5kPH2sYFNaSJo8lZ\n/QDuBjZl5h3lhySptCZ7/IuBrwGXRsT63u2PCo9LUkFNFtT4OVB2Vg1JA+WVe1KFDL5UIYMvVcjg\nSxUy+FKFDL5UIYMvVajIghpTdu9j+pMvlSh9RC45vWh9GMxiF0/f/k/Fe/zeyrKPo/NRFq0PsOvM\nE4v3mHvP08V75IXnFO/RhHt8qUIGX6qQwZcqZPClChl8qUIGX6qQwZcqZPClCjWZemtaRDwbEc/3\nFtT43iAGJqmcJlfufQxcmpl7epNu/jwifpqZ/1V4bJIKaTL1VgJ7el8O9W7lr9GUVEzT6bU7EbEe\n2A48kZkuqCFNYI2Cn5kjmXkusBBYFhFnH73N6AU19ue+tscpqUV9ndXPzA+A1cAVx/jZkQU1hmNa\nW+OTVECTs/onR8Sc3v3pwGXAy6UHJqmcJmf1FwD3RUSH7gvFjzLzkbLDklRSk7P6L9BdIVfSJOGV\ne1KFDL5UIYMvVcjgSxUy+FKFDL5UIYMvVajIghoAdDrFSgNsXV5+gYUFv/iweI/Si10AvHJt2UU7\nLvpW+ccwCJ35pxTv8dHs4aL1sxONtnOPL1XI4EsVMvhShQy+VCGDL1XI4EsVMvhShQy+VKHGwe/N\ntPtcRDj7jjTB9bPHvwnYVGogkgan6bz6C4GvACvKDkfSIDTd438f+DZwqOBYJA1Ik+m1rwK2Z+ba\nMbZzQQ1pgmiyx78YuDoitgAPApdGxA+P3sgFNaSJY8zgZ+Z3M3NhZi4GrgF+lpnXFR+ZpGL8O75U\nob4m4sjMJ4Eni4xE0sC4x5cqZPClChl8qUIGX6qQwZcqZPClCpWZV394iFj42SKlD5v5dhatD7Dz\nnBnFe3Q+Kv84Ss97/593lJ23H+CLN/xp8R45f27xHr8+c6ho/ZG1zqsv6Xcw+FKFDL5UIYMvVcjg\nSxUy+FKFDL5UIYMvVcjgSxVqdOVeb7693cAIcDAzl5YclKSy+rlk90uZubPYSCQNjIf6UoWaBj+B\nxyNibUTcWHJAkspreqj/hczcFhGnAE9ExMuZ+dToDXovCDcCTBs6seVhSmpToz1+Zm7r/bsdeBhY\ndoxtfrugRqf8x1klfXpNltCaGRGzDt8HLgc2lB6YpHKaHOrPBx6OiMPbP5CZjxYdlaSixgx+Zr4G\nnDOAsUgaEP+cJ1XI4EsVMvhShQy+VCGDL1XI4EsVKrOgxsgI8cHuIqUPm75zTtH6AHNf2FO8x64z\nJ/7lzYNY7OLJFf9SvMeVl19TvMcJ20aK1p9yoOF2RUchaVwy+FKFDL5UIYMvVcjgSxUy+FKFDL5U\nIYMvVahR8CNiTkSsioiXI2JTRFxYemCSyml65d4/AI9m5h9HxDDgpHrSBDZm8CNiNnAJ8HWAzNwP\n7C87LEklNTnUPw3YAdwbEc9FxIrepJuSJqgmwZ8KnA/cmZnnAXuB7xy9UUTcGBFrImLN/kMftTxM\nSW1qEvytwNbMfKb39Sq6LwSf8Il59adMb3OMklo2ZvAz813grYg4q/et5cDGoqOSVFTTs/rfBO7v\nndF/Dbi+3JAkldYo+Jm5HlhaeCySBsQr96QKGXypQgZfqpDBlypk8KUKGXypQgZfqlCRBTX2LRxi\n820LSpQ+YvZTZdYCGW3vggEs2nHP08V7dOafUrR+zp9btD4MZrGLnz7+YPEev/93f160fjbclbvH\nlypk8KUKGXypQgZfqpDBlypk8KUKGXypQgZfqtCYwY+IsyJi/ajbroi4eRCDk1TGmJe/ZeZm4FyA\niOgA24CHC49LUkH9HuovB17NzDdKDEbSYPQb/GuAlSUGImlwGge/N8Pu1cCPf8fPjyyoMbJ7b1vj\nk1RAP3v8K4F1mfmrY/1w9IIanVmusCWNZ/0E/1o8zJcmhUbB7y2SeRnwUNnhSBqEpgtq7AVOKjwW\nSQPilXtShQy+VCGDL1XI4EsVMvhShQy+VCGDL1UoMrP1ojPnLcolV93Set3Rdiw7VLQ+wBk/+LB4\nj+yUf+09MHu4aP1fnzlUtD7ACdtGivf4+MTyz8Uvb7uzaP1lf/gWa57fF2Nt5x5fqpDBlypk8KUK\nGXypQgZfqpDBlypk8KUKGXypQk1n4LklIl6KiA0RsTIippUemKRymqykcyrwV8DSzDwb6NCdZlvS\nBNX0UH8qMD0ipgIzgLfLDUlSaWMGPzO3AbcDbwLvAL/JzMdLD0xSOU0O9T8DfBU4DfgcMDMirjvG\ndkcW1Di4zwU1pPGsyaH+l4HXM3NHZh6gO8X2RUdvNHpBjanTXFBDGs+aBP9N4IKImBERQXfhzE1l\nhyWppCbv8Z8BVgHrgBd7v3NX4XFJKqjpghq3ArcWHoukAfHKPalCBl+qkMGXKmTwpQoZfKlCBl+q\nkMGXKlRkQY2I2AG80cevzAN2tj6QyddjMjwGe5St//nMPHmsjYoEv18RsSYzl9rj+Na3x/jqUbK+\nh/pShQy+VKHxEvxBfOhnMvSYDI/BHuOg/rh4jy9psMbLHl/SABl8qUIGX6qQwZcqZPClCv0PUc5n\noKyJ7xMAAAAASUVORK5CYII=\n",
+            "text/plain": [
+              "<Figure size 288x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mNpSE3DLyS0J",
+        "colab_type": "text"
+      },
+      "source": [
+        "Procesamiento de datos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FVr_-Y6yyV2T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
